--- a/roles/connect_me/tasks/main.yml
+++ b/roles/connect_me/tasks/main.yml
@@ -26,6 +26,23 @@
     - django==1.4
     - gunicorn
 
+- name: copy nginx sites-available configuration
+  copy: >
+      src=connect_me
+      dest=/etc/nginx/sites-available/connect_me
+
+- name: create link for nginx sites-enabled configuration
+  file: >
+      state=link
+      src=/etc/nginx/sites-available/connect_me
+      dest=/etc/nginx/sites-enabled/connect_me
+  notify: restart nginx
+
+- name: copy supervisor configuration
+  copy: >
+      src=gunicorn.conf
+      dest=/etc/supervisor/conf.d/gunicorn.conf
+
 - name: create directory to clone application
   file: >
       state=directory
@@ -58,34 +75,18 @@
       dest=/srv/www/connect_me/connect_me/settings.py
       force=yes
 
-- name: run syncdb command
-  sudo: no
-  django_manage: >
-      command=syncdb
-      app_path=/srv/www/connect_me
-      virtualenv=/usr/local/share/connect_me
-
-- name: nginx sites-available configuration
-  copy: >
-      src=connect_me
-      dest=/etc/nginx/sites-available/connect_me
-
-- name: nginx sites-enabled configuration
-  file: >
-      state=link
-      src=/etc/nginx/sites-available/connect_me
-      dest=/etc/nginx/sites-enabled/connect_me
-
 - name: create directory for logging
   file: >
       state=directory
       path=/var/log/connect_me/
       mode=0755
 
-- name: copy supervisor configuration
-  copy: >
-      src=gunicorn.conf
-      dest=/etc/supervisor/conf.d/gunicorn.conf
+- name: run syncdb command
+  sudo: no
+  django_manage: >
+      command=syncdb
+      app_path=/srv/www/connect_me
+      virtualenv=/usr/local/share/connect_me
   notify:
-      - "restart supervisor"
-      - "restart nginx"
+    - restart supervisor
+    - restart nginx
